11-istio-scripts-and-configuration/04-helloworld-multiple-deployments.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-rest-api
  labels:
    app: hello-world-rest-api
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: hello-world-rest-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-rest-api-v4
  labels:
    version: v4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world-rest-api
      version: v4
  template:
    metadata:
      labels:
        app: hello-world-rest-api
        version: v4
    spec:
      containers:
        - name: hello-world-rest-api
          image: saurabhkumardocker/hello-world-rest-api:0.0.4-SNAPSHOT
          imagePullPolicy: IfNotPresent #Always
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-rest-api-v5
  labels:
    version: v5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world-rest-api
      version: v5
  template:
    metadata:
      labels:
        app: hello-world-rest-api
        version: v5
    spec:
      containers:
        - name: hello-world-rest-api
          image: saurabhkumardocker/hello-world-rest-api:0.0.5-SNAPSHOT
          imagePullPolicy: IfNotPresent #Always
          ports:
            - containerPort: 8080
