11-istio-scripts-and-configuration/05-helloworld-mirroring.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-virtual-services
spec:
  hosts:
    - "*"
  gateways:
    - http-gateway
  http:
    - match:
        - uri:
            exact: /hello-world
      route:
        - destination:
            host: hello-world-rest-api
            subset: v4
          weight: 100
      mirror:
        host: hello-world-rest-api
        subset: v5
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: hello-world-rest-api
spec:
  host: hello-world-rest-api
  subsets:
    - name: v4
      labels:
        version: v4
    - name: v5
      labels:
        version: v5
