11-istio-scripts-and-configuration/istio-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-system # Use same namespace with backend service
spec:
  hosts:
  - "*"
  gateways:
  - kiali-gateway # define gateway name
  http:
  - match:
    - uri:
        prefix: "/kiali"
    route:
    - destination:
        port:
          number: 20001 # Backend service port
        host: kiali # Backend service name
  - match:
    - uri:
        prefix: "/jaeger"
    route:
    - destination:
        port:
          number: 16686 # Backend service port
        host: jaeger-query # Backend service name
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        port:
          number: 3000 # Backend service port
        host: grafana # Backend service name
